# libztalk

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  read.cpp
include/ztalk/: dynamic_extent.h  read.h  stdio.h  types.h
src/: not_implemented.cpp  not_implemented.h  read.cpp  stdio.cpp
